# loginsqlite

./: .gitignore  README.md  pyproject.toml
src/loginsqlite/: __init__.py  err.py  format.py
tests/: test_logger.py
