[tool.poetry]
name = "loginsqlite"
version = "0.1.0"
description = ""
authors = ["svtter <svtter@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
